feat:优化代码并添加初始化成功提示
- 在 Main 类中添加初始化成功提示，使用绿色 ANSI 颜色
- 在 PasswordPuzzle 类中，使用 getLast() 方法替代 get(size() - 1) 获取最后一个猜测密码